# zsdx

./: .gitignore  CMakeLists.txt  ChangeLog  changelog.txt  license.txt  make_quest_package  make_zip  readme.md  readme.txt  zsdx.desktop
data/: console.lua  dungeons.lua  equipment.lua  main.lua  play_game.lua  quest_manager.lua
data/enemies/: agahnim.lua  agahnim_2.lua  agahnim_2_fake.lua  arbror_root.lua  bee_guard.lua  billy.lua  blue_bullblin.lua  blue_dogman.lua  blue_duck_soldier.lua  blue_fireball_triple.lua  blue_hardhat_beetle.lua  blue_knight_soldier.lua  blue_pig_soldier.lua  bubble.lua  chain_and_ball.lua  drakomos.lua  drakomos_head.lua  drakomos_lava_spawner.lua  evil_tile.lua  fire_bat.lua  fire_circle.lua  fireball_simple.lua  firebird.lua  flora_gohma.lua  flora_gohma_eye.lua  ganon.lua  gelidrak.lua  gelidrak_head.lua  gelidrak_tail.lua  generic_soldier.lua  generic_towards_hero.lua  generic_waiting_for_hero.lua  gibdo.lua  globul.lua  green_duck_soldier.lua  green_knight_soldier.lua  khorneth.lua  khotor.lua  laser.lua  lizalfos.lua  (+17 more)
data/hud/: action_icon.lua  attack_icon.lua  floor.lua  hearts.lua  hud.lua  item_icon.lua  magic_bar.lua  pause_icon.lua  rupees.lua  small_keys.lua
data/items/: bottle.lua  bottle_1.lua  bottle_2.lua  bottle_3.lua  bottle_4.lua  bow.lua  cane_of_somaria.lua  fairy.lua  heart_container.lua  lamp.lua  mystic_mirror.lua  piece_of_heart.lua
data/logos/: icon.icns
data/maps/: 0.lua  10.lua  101.lua  102.lua  103.lua  104.lua  105.lua  106.lua  107.lua  108.lua  109.lua  11.lua  110.lua  111.lua  112.lua  113.lua  114.lua  118.lua  119.lua  12.lua  121.lua  126.lua  127.lua  130.lua  131.lua  134.lua  135.lua  136.lua  15.lua  16.lua  17.lua  18.lua  19.lua  2.lua  20.lua  23.lua  24.lua  25.lua  26.lua  27.lua  (+65 more)
data/maps/lib/: light_manager.lua
data/menus/: dialog_box.lua  game_over.lua  language.lua  pause.lua  pause_inventory.lua  pause_map.lua  pause_options.lua  pause_quest_status.lua  pause_submenu.lua  savegames.lua  solarus_logo.lua  team_logo.lua  title.lua
data/musics/: agahnim.it  beginning.it  boss.it  castle.it  cave.it  credits.it  dark_mountain.it  dark_world.it  dark_world_dungeon.it  dungeon_finished.it  excalibur.it  fanfare.it  fortune_teller.it  game_over.it  ganon_appears.it  ganon_battle.it  ganon_theme.it  great_fairy.it  legend.it  light_world_dungeon.it  lost_woods.it  mini_game.it  overworld.it  rabbit.it  sanctuary.it  soldiers.it  title_screen.it  triforce.it  victory.it  village.it  zelda.it
work/: translation.txt
